@@ -61,6 +61,7 @@ set auto_path [linsert $::auto_path 0 $g_AnnotSV(tclDir)/tcllib]
 source $g_AnnotSV(tclDir)/AnnotSV-benignsv.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-candidategenes.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-clingen.tcl
+source $g_AnnotSV(tclDir)/AnnotSV-closestgenes.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-config.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-cosmic.tcl
 source $g_AnnotSV(tclDir)/AnnotSV-cytoband.tcl
