@@ -11,6 +11,9 @@
 For more details, please see the README file.
 
 January,  , 2024, AnnotSV version 3.4
+	- Add 2 new features: Closest_left and Closest_right
+		=> AnnotSV expands the SV up to 5 megabases in both direction (left and right) and then tries to find neighboring genes
+		   In both directions, the closest gene to the SV is reported
 	- Take use of PhenoGenius (Yauy et al., 2023) for the phenotype-driven analysis and the ranking
 		- Add 3 new features: PhenoGenius_score, PhenoGenius_phenotype and PhenoGenius_specificity
 	- Gene names are now sorted by genomic coordinates and no longer sorted alphabetically ("Gene_name" feature)
